# Rust-ImageResizing-Benchmarks

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
initial-resizing-project/src/: Image_Lib.rs  img_resizing_lambda.rs  test.rs
rc-serverless-resizing/: Cargo.toml
rc-serverless-resizing/src/: img_resizing_lambda.rs
rs-serverless-resizing/: .gitignore  Cargo.toml  package-lock.json  serverless.yml
rs-serverless-resizing/lambda_resize_preprocess/: lambda_func.rs  opencv_preprocess.rs  resized_img_path.rs
rs-serverless-resizing/src/: img_resizing_lambda.rs  lambda_func.rs  resize.rs  s3_utils.rs  test.rs
src/: Image_Lib.rs  Raster_Lib.rs  img_resizing_lambda.rs  main.rs  test.rs
tests/: image_resize_test.rs
