[package]
name = "Rust-ImageResizing-Benchmarks"
version = "0.1.0"
authors = ["Holmusk <tech@holmusk.com>"]
edition = "2018"

# For running a particular binary e.g. raster # cargo run --bin raster
[[bin]]
 name = "image"
 path = "src/Image_Lib.rs"

[[bin]]
 name = "raster"
 path = "src/Raster_Lib.rs"


[dependencies]
"image" = "0.23.4"
"raster" = "0.2.0"
rusoto_s3 = {version = "0.43.0", default_features = false, features=["rustls"]}
rusoto_core = {version = "0.43.0", default_features = false, features=["rustls"]}
futures = "0.3.4"
bytes = "0.5.4"